namespace java com.tomesoftware.capitalize

service CapitalizeService {
    string capitalize(1:string text)
}
