namespace py reverse

service ReverseService {
    string reverse(1:string text)
}
