service UncapitalizeService {
    string uncapitalize(1:string text)
}
